rotate display for portrait

--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -10,9 +10,11 @@ BR2_TOOLCHAIN_EXTERNAL_GCC_5=y
 BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_4=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_GLIBC=y
 BR2_TOOLCHAIN_EXTERNAL_CXX=y
-BR2_TARGET_GENERIC_HOSTNAME=""
+BR2_TARGET_GENERIC_HOSTNAME="pi3kiosk"
 BR2_TARGET_GENERIC_ISSUE=""
+BR2_TARGET_GENERIC_PASSWD_SHA256=y
 BR2_INIT_NONE=y
+BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 # BR2_TARGET_GENERIC_GETTY is not set
 # BR2_TARGET_GENERIC_REMOUNT_ROOTFS_RW is not set
 BR2_ENABLE_LOCALE_WHITELIST="locale-archive"
@@ -25,7 +27,7 @@ BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/raspberrypi/linux.git"
 BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="04c8e47067d4873c584395e5cb260b4f170a99ea"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
-BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="${NERVES_DEFCONFIG_DIR}/linux-4.4.defconfig"
+BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="${NERVES_DEFCONFIG_DIR}/linux-ts.defconfig"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="bcm2710-rpi-3-b"
 BR2_LINUX_KERNEL_EXT_KERNEL_WIRELESS_REGDB=y
@@ -33,13 +35,46 @@ BR2_PACKAGE_BUSYBOX_CONFIG="${BR2_EXTERNAL_NERVES_PATH}/board/nerves-common/busy
 BR2_PACKAGE_E2FSPROGS=y
 # BR2_PACKAGE_E2FSPROGS_FSCK is not set
 BR2_PACKAGE_FWUP=y
+BR2_PACKAGE_COMIX_CURSORS=y
+BR2_PACKAGE_DEJAVU=y
+BR2_PACKAGE_DIRECTFB=y
+BR2_PACKAGE_QT5=y
+BR2_PACKAGE_QT5BASE_LINUXFB=y
+BR2_PACKAGE_QT5BASE_DIRECTFB=y
+BR2_PACKAGE_QT5BASE_EGLFS=y
+BR2_PACKAGE_QT5BASE_DEFAULT_QPA="directfb"
+BR2_PACKAGE_QT5BASE_FONTCONFIG=y
+BR2_PACKAGE_QT5BASE_GIF=y
+BR2_PACKAGE_QT5BASE_JPEG=y
+BR2_PACKAGE_QT5BASE_PNG=y
+BR2_PACKAGE_QT5BASE_DBUS=y
+BR2_PACKAGE_QT5BASE_TSLIB=y
+BR2_PACKAGE_QT5WEBCHANNEL=y
+BR2_PACKAGE_QT_WEBKIT_KIOSK=y
+BR2_PACKAGE_QT_WEBKIT_KIOSK_SOUNDS=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE_X=y
 BR2_PACKAGE_RPI_WIFI_FIRMWARE=y
+BR2_PACKAGE_EUDEV_RULES_GEN=y
+BR2_PACKAGE_INPUT_EVENT_DAEMON=y
 BR2_PACKAGE_RPI_USERLAND=y
 BR2_PACKAGE_UBOOT_TOOLS=y
 BR2_PACKAGE_ERLANG_SMP=y
+BR2_PACKAGE_LIBHID=y
+BR2_PACKAGE_LIBIIO=y
+BR2_PACKAGE_LIBINPUT=y
+BR2_PACKAGE_WIRINGPI=y
+BR2_PACKAGE_LIBMPEG2=y
+BR2_PACKAGE_LIBMPEG2_BINS=y
+BR2_PACKAGE_LIBOPENH264=y
+BR2_PACKAGE_LIBPLAYER=y
+BR2_PACKAGE_LIBPLAYER_MPLAYER=y
+BR2_PACKAGE_LIBPLAYER_GSTREAMER=y
+BR2_PACKAGE_X264=y
+BR2_PACKAGE_X265=y
 BR2_PACKAGE_LIBMNL=y
+BR2_PACKAGE_LIBEV=y
+BR2_PACKAGE_LIBEVENT=y
 BR2_PACKAGE_NCURSES=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_WPA_SUPPLICANT_DEBUG_SYSLOG=y
