--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -32,6 +32,7 @@ BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="bcm2710-rpi-3-b"
 BR2_LINUX_KERNEL_EXT_KERNEL_WIRELESS_REGDB=y
 BR2_PACKAGE_BUSYBOX_CONFIG="${BR2_EXTERNAL_NERVES_PATH}/board/nerves-common/busybox-1.22.config"
+BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_E2FSPROGS=y
 # BR2_PACKAGE_E2FSPROGS_FSCK is not set
 BR2_PACKAGE_FWUP=y
@@ -60,6 +61,21 @@ BR2_PACKAGE_INPUT_EVENT_DAEMON=y
 BR2_PACKAGE_RPI_USERLAND=y
 BR2_PACKAGE_UBOOT_TOOLS=y
 BR2_PACKAGE_ERLANG_SMP=y
+BR2_PACKAGE_LIBQRENCODE=y
+BR2_PACKAGE_LIBQRENCODE_TOOLS=y
+BR2_PACKAGE_OPENCV3=y
+BR2_PACKAGE_OPENCV3_WITH_QT5=y
+BR2_PACKAGE_OPENCV3_LIB_OBJDETECT=y
+BR2_PACKAGE_OPENCV3_LIB_SHAPE=y
+BR2_PACKAGE_OPENCV3_LIB_SUPERRES=y
+BR2_PACKAGE_OPENCV3_LIB_TS=y
+BR2_PACKAGE_OPENCV3_LIB_VIDEOSTAB=y
+BR2_PACKAGE_OPENCV3_WITH_FFMPEG=y
+BR2_PACKAGE_OPENCV3_WITH_GSTREAMER1=y
+BR2_PACKAGE_OPENCV3_WITH_JASPER=y
+BR2_PACKAGE_OPENCV3_WITH_JPEG=y
+BR2_PACKAGE_OPENCV3_WITH_PNG=y
+BR2_PACKAGE_OPENCV3_WITH_TIFF=y
 BR2_PACKAGE_LIBHID=y
 BR2_PACKAGE_LIBIIO=y
 BR2_PACKAGE_LIBINPUT=y
@@ -75,9 +91,10 @@ BR2_PACKAGE_X265=y
 BR2_PACKAGE_LIBMNL=y
 BR2_PACKAGE_LIBEV=y
 BR2_PACKAGE_LIBEVENT=y
-BR2_PACKAGE_NCURSES=y
+BR2_PACKAGE_MTDEV2TUIO=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_WPA_SUPPLICANT_DEBUG_SYSLOG=y
+BR2_PACKAGE_BASH=y
 BR2_TARGET_ROOTFS_SQUASHFS=y
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_NERVES_SYSTEM_NAME="nerves_system_rpi3"
