--- a/rootfs-additions/etc/erlinit.config
+++ b/rootfs-additions/etc/erlinit.config
@@ -30,7 +30,7 @@
 #--graceful-shutdown-timeout 15000
 
 # Optionally run a program if the Erlang VM exits
---run-on-exit /bin/sh
+--run-on-exit /bin/bash
 
 # Enable UTF-8 filename handling in Erlang and custom inet configuration
 -e LANG=en_US.UTF-8;LANGUAGE=en;ERL_INETRC=/etc/erl_inetrc;ERL_CRASH_DUMP=/root/crash.dump
